# weather-alert

./: .dockerignore  Dockerfile  README.md  compose.yml  entrypoint.sh  env.example  manage.py  pyproject.toml  requirements.txt
apps/alerts/: models.py  schemas.py  views.py
apps/alerts/migrations/: 0001_initial.py  0002_alter_alertconfig_location.py
apps/api/: app.py
apps/location/: models.py  schemas.py  views.py
apps/location/migrations/: 0001_initial.py
apps/temperature/: admin.py  apps.py  models.py  views.py
apps/temperature/migrations/: 0001_initial.py
tests/: conftest.py
tests/test_alerts/: test_alert_service.py  test_alerts_config_service.py  test_alerts_views.py
tests/test_celery_tasks/: test_alert_tasks.py
tests/test_integrations/: test_openmeteo.py
tests/test_location/: test_location_views.py
tests/test_temperature/: test_temperature_views.py
weather_alert/: asgi.py  celery.py  context_processors.py  settings.py  urls.py  wsgi.py
weather_alert/api/: app.py  security.py
weather_alert/apps/alerts/: admin.py  apps.py  models.py  schemas.py  tasks.py  views.py
weather_alert/apps/alerts/migrations/: 0001_initial.py
weather_alert/apps/alerts/services/: alert_config_service.py  alert_service.py
weather_alert/apps/frontend/: apps.py  urls.py  views.py
weather_alert/apps/frontend/templates/: alert_configs.html  alerts.html  base.html  index.html  locations.html
weather_alert/apps/location/: apps.py  views.py
weather_alert/apps/temperature/: apps.py  models.py  schemas.py  views.py
weather_alert/integrations/: openmeteo.py
